syntax = "proto3";

option csharp_namespace = "GrpcExam";


service ExamGrpc{

	rpc GetExamItemFromExamData(GetExamItem) returns (ExamItemModel) {}
}


message GetExamItem {
	int32 examId = 1;
}

message ExamItemModel {
	string title = 1;
	string description = 2;
	double passingScore = 3;
	int32 countQuestions = 4;
}